--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,28 @@
   font-weight: bolder;
 }
 
+#choix{
+  font-family: 'Dancing Script';
+  font-weight: bold;
+  margin: 0 auto;
+}
+#boules{
+  width: 100px;
+}
+.index_content a{
+  background-color: rgba(0, 128, 0, 0.267);
+  text-align: center;
+  font-weight: bold;
+  font-family: 'Dancing Script';
+  font-size: 20px;
+}
+
 .index_content{
-  width: fit-content;
+  width: 15em;
   margin-top: 4em;
+  border-radius: 10px;
+  background-color: #B40906;
+  box-shadow: 2px 2px 10px 2px black;
 }
 
 @media screen and (max-width: 800px){
@@ -50,6 +69,8 @@
 }
 
 
+
+
 /* .thumbnail{
   padding: 3em;
   width: 200px;
@@ -66,9 +87,11 @@
 } */
 
 .row{
-  margin-bottom: 3em;
-  margin-top: 3em;
+
+  width: 75%;
+    margin: 4em auto;
 }
+
 
 .card{
   margin-right: 2.5em;
@@ -368,3 +391,23 @@ input[type="file"] {
     }
   
 /* FIN DU TABLEAU */
+
+
+.total{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.total h3{
+  width: fit-content;
+  background-color: white;
+  padding: 7px;
+}
+
+/* .panier{
+  margin-top: 2em;
+} */
+
+.table{
+  margin-top: 2em;
+}
